--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy>=1.22.0
-pandas>=0.25.0
-scipy>=1.3.0
-scikit-learn>=0.21.2
-nilearn>=0.5.2
-networkx>=2.3
-yacs
+numpy==1.24.4
+pandas==2.2.1
+scipy==1.11.1
+scikit-learn==1.4.1
+nilearn==0.10.2
+networkx==3.3
+yacs==0.1.8
